@@ -741,6 +741,106 @@ add_dither (int nchannels, int width, int height, int depth,
 
 
 
+template<typename T>
+static void
+premult_impl (int nchannels, int width, int height, int depth,
+              int chbegin, int chend,
+              T *data, stride_t xstride, stride_t ystride, stride_t zstride,
+              int alpha_channel, int z_channel)
+{
+    char *plane = (char *)data;
+    for (int z = 0;  z < depth;  ++z, plane += zstride) {
+        char *scanline = plane;
+        for (int y = 0;  y < height;  ++y, scanline += ystride) {
+            char *pixel = scanline;
+            for (int x = 0;  x < width;  ++x, pixel += xstride) {
+                DataArrayProxy<T,float> val ((T*)pixel);
+                float alpha = val[alpha_channel];
+                for (int c = chbegin;  c < chend;  ++c) {
+                    if (c == alpha_channel || c == z_channel)
+                        continue;
+                    val[c] = alpha * val[c];
+                }
+            }
+        }
+    }
+}
+
+
+
+void
+premult (int nchannels, int width, int height, int depth,
+         int chbegin, int chend,
+         TypeDesc datatype, void *data,
+         stride_t xstride, stride_t ystride, stride_t zstride,
+         int alpha_channel, int z_channel)
+{
+    if (alpha_channel < 0 || alpha_channel > nchannels)
+        return;  // nothing to do
+    ImageSpec::auto_stride (xstride, ystride, zstride,
+                            datatype.size(), nchannels, width, height);
+    switch (datatype.basetype) {
+    case TypeDesc::FLOAT :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (float*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::UINT8 :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (unsigned char*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::UINT16 :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (unsigned short*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::HALF :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (half*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::INT8 :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (char*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::INT16 :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (short*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::INT :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (int*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::UINT :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (unsigned int*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::INT64 :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (int64_t*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::UINT64 :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (uint64_t*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    case TypeDesc::DOUBLE :
+        premult_impl (nchannels, width, height, depth, chbegin, chend,
+                      (double*)data, xstride, ystride, zstride,
+                      alpha_channel, z_channel);
+        break;
+    default: break;
+    }
+}
+
+
+
 void
 DeepData::init (int npix, int nchan,
                 const TypeDesc *chbegin, const TypeDesc *chend)
